Fixed Map position and visibility

--- a/css/style.css
+++ b/css/style.css
@@ -105,3 +105,9 @@ body{
     background-color:#F30;
     height:17px;	
 }
+#mapWindow{
+	visibility:hidden;
+	position:relative;
+	right:-150px;
+	top:80px;
+}
